src/test/ui/bare-function-self.rs
fn a(&self) { }
//~^ ERROR unexpected `self` argument in bare function

fn main() { }
